--- a/public/html/web/car/bind.html
+++ b/public/html/web/car/bind.html
@@ -138,6 +138,7 @@
 
     <div class="">
         <input type="text" name="mobile" value="">
+        <input type="text" name="code" value="">
     </div>
 </div>
 
