--- a/public/html/web/car/bind.html
+++ b/public/html/web/car/bind.html
@@ -137,6 +137,9 @@
     </div>
 
     <div class="">
+        <div>
+
+        </div>
         <input type="text" name="mobile" value="">
         <input type="text" name="code" value="">
     </div>
